[gd_scene load_steps=18 format=3 uid="uid://dkqvaiopqwuo1"]

[ext_resource type="Script" path="res://script/node_2d.gd" id="1_a1i31"]
[ext_resource type="Texture2D" uid="uid://cs82rkjooiobl" path="res://assets/background.png" id="2_ap666"]
[ext_resource type="Texture2D" uid="uid://dcnbjyjip8ivk" path="res://assets/backround underwater.png" id="3_0p7wa"]
[ext_resource type="Texture2D" uid="uid://c8m8kqn0uc2tv" path="res://assets/penguin.png" id="4_aqm5v"]
[ext_resource type="PackedScene" uid="uid://cjkc7mdn813hh" path="res://scene/maincharacter.tscn" id="5_58xd7"]
[ext_resource type="Texture2D" uid="uid://280sqny4sbr" path="res://assets/hook.png" id="6_s7g7e"]
[ext_resource type="Script" path="res://script/retryButton.gd" id="7_o4m51"]
[ext_resource type="AudioStream" uid="uid://p3iskmo2ca5l" path="res://assets/Tobu_-_Candyland_NCS_Release-190269240.mp3" id="8_y1ia6"]

[sub_resource type="ArrayMesh" id="ArrayMesh_342ws"]
_surfaces = [{
"2d": true,
"aabb": AABB(-461, -500, 0, 961, 388, 0),
"attribute_data": PackedByteArray(0, 0, 128, 63, 209, 34, 91, 62, 63, 164, 127, 63, 209, 34, 91, 62, 8, 27, 126, 63, 100, 59, 95, 62, 190, 159, 122, 63, 100, 59, 95, 62, 225, 122, 84, 63, 246, 40, 92, 62, 225, 122, 84, 63, 173, 250, 92, 62, 94, 186, 73, 63, 101, 25, 98, 62, 94, 186, 73, 63, 174, 182, 98, 62, 10, 104, 66, 63, 104, 145, 109, 62, 141, 6, 64, 63, 104, 145, 109, 62, 86, 125, 62, 63, 102, 102, 102, 62, 26, 226, 56, 63, 250, 126, 106, 62, 74, 123, 51, 63, 250, 126, 106, 62, 29, 90, 36, 63, 160, 171, 109, 62, 29, 90, 36, 63, 140, 185, 107, 62, 0, 111, 33, 63, 102, 102, 102, 62, 141, 151, 238, 62, 102, 102, 102, 62, 141, 151, 238, 62, 230, 29, 103, 62, 188, 5, 210, 62, 215, 163, 112, 62, 217, 61, 185, 62, 215, 163, 112, 62, 70, 182, 179, 62, 104, 0, 111, 62, 94, 186, 73, 62, 162, 180, 119, 62, 94, 186, 73, 62, 144, 160, 120, 62, 164, 112, 61, 62, 181, 166, 121, 62, 253, 246, 53, 62, 0, 0, 128, 62, 13, 79, 47, 62, 0, 0, 128, 62, 122, 54, 43, 62, 109, 231, 123, 62, 155, 119, 28, 62, 109, 231, 123, 62, 31, 244, 236, 61, 143, 194, 117, 62, 162, 69, 182, 61, 143, 194, 117, 62, 57, 180, 72, 61, 180, 200, 118, 62, 57, 180, 72, 61, 106, 188, 116, 62, 119, 190, 31, 61, 104, 145, 109, 62, 119, 190, 31, 61, 102, 102, 102, 62, 10, 215, 35, 61, 242, 210, 77, 62, 121, 88, 40, 61, 242, 210, 77, 62, 160, 137, 48, 61, 82, 184, 30, 62, 125, 174, 54, 61, 82, 184, 30, 62, 244, 253, 84, 61, 130, 226, 7, 62, 244, 253, 84, 61, 33, 65, 241, 61, 174, 71, 97, 61, 135, 22, 217, 61, 174, 71, 97, 61, 53, 94, 186, 61, 104, 145, 109, 61, 111, 18, 131, 59, 180, 89, 117, 61, 111, 18, 131, 59, 182, 243, 125, 61, 111, 18, 3, 58, 0, 0, 128, 63, 0, 0, 0, 0, 69, 216, 240, 62, 51, 51, 147, 62, 23, 72, 240, 62, 225, 122, 148, 62, 206, 170, 239, 62, 225, 122, 148, 62, 169, 164, 238, 62, 25, 4, 150, 62, 58, 1, 237, 62, 25, 4, 150, 62, 205, 93, 235, 62, 216, 129, 147, 62, 250, 237, 235, 62, 152, 110, 146, 62, 123, 165, 236, 62, 152, 110, 146, 62, 86, 14, 237, 62, 188, 5, 146, 62, 86, 14, 237, 62, 33, 65, 145, 62, 4, 86, 238, 62, 243, 176, 144, 62, 177, 191, 236, 62, 254, 212, 152, 62, 131, 47, 236, 62, 172, 28, 154, 62, 58, 146, 235, 62, 172, 28, 154, 62, 22, 140, 234, 62, 227, 165, 155, 62, 167, 232, 232, 62, 227, 165, 155, 62, 57, 69, 231, 62, 163, 35, 153, 62, 102, 213, 231, 62, 98, 16, 152, 62, 231, 140, 232, 62, 98, 16, 152, 62, 195, 245, 232, 62, 135, 167, 151, 62, 195, 245, 232, 62, 236, 226, 150, 62, 113, 61, 234, 62, 189, 82, 150, 62, 142, 228, 2, 63, 172, 28, 154, 62, 120, 156, 2, 63, 209, 34, 155, 62, 156, 51, 2, 63, 209, 34, 155, 62, 60, 78, 1, 63, 72, 80, 156, 62, 156, 196, 0, 63, 27, 192, 155, 62, 156, 196, 0, 63, 154, 8, 155, 62, 82, 39, 0, 63, 35, 219, 153, 62, 105, 111, 0, 63, 117, 147, 152, 62, 14, 190, 0, 63, 117, 147, 152, 62, 37, 6, 1, 63, 189, 193, 151, 62, 37, 6, 1, 63, 180, 200, 150, 62, 51, 196, 1, 63, 217, 95, 150, 62, 78, 243, 14, 63, 66, 96, 197, 62, 54, 171, 14, 63, 240, 167, 198, 62, 68, 139, 12, 63, 240, 167, 198, 62, 68, 139, 12, 63, 111, 129, 196, 62, 86, 14, 13, 63, 92, 254, 195, 62, 86, 14, 13, 63, 47, 110, 195, 62, 45, 178, 13, 63, 1, 222, 194, 62),
"format": 34393296913,
"index_count": 231,
"index_data": PackedByteArray(45, 0, 0, 0, 1, 0, 1, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 6, 0, 7, 0, 8, 0, 8, 0, 9, 0, 10, 0, 10, 0, 11, 0, 12, 0, 12, 0, 13, 0, 14, 0, 16, 0, 17, 0, 18, 0, 18, 0, 19, 0, 20, 0, 21, 0, 22, 0, 23, 0, 23, 0, 24, 0, 25, 0, 26, 0, 27, 0, 28, 0, 29, 0, 30, 0, 31, 0, 31, 0, 32, 0, 33, 0, 33, 0, 34, 0, 35, 0, 35, 0, 36, 0, 37, 0, 38, 0, 39, 0, 40, 0, 40, 0, 41, 0, 42, 0, 43, 0, 44, 0, 45, 0, 45, 0, 1, 0, 3, 0, 6, 0, 8, 0, 10, 0, 10, 0, 12, 0, 14, 0, 16, 0, 18, 0, 20, 0, 23, 0, 25, 0, 26, 0, 28, 0, 29, 0, 31, 0, 31, 0, 33, 0, 35, 0, 35, 0, 37, 0, 38, 0, 40, 0, 42, 0, 43, 0, 43, 0, 45, 0, 3, 0, 4, 0, 6, 0, 10, 0, 10, 0, 14, 0, 15, 0, 16, 0, 20, 0, 21, 0, 21, 0, 23, 0, 26, 0, 28, 0, 31, 0, 35, 0, 40, 0, 43, 0, 3, 0, 4, 0, 10, 0, 15, 0, 21, 0, 26, 0, 28, 0, 28, 0, 35, 0, 38, 0, 38, 0, 40, 0, 3, 0, 4, 0, 15, 0, 16, 0, 16, 0, 21, 0, 28, 0, 38, 0, 3, 0, 4, 0, 16, 0, 28, 0, 38, 0, 38, 0, 4, 0, 16, 0, 56, 0, 46, 0, 47, 0, 48, 0, 49, 0, 50, 0, 50, 0, 51, 0, 52, 0, 54, 0, 55, 0, 56, 0, 56, 0, 47, 0, 48, 0, 48, 0, 50, 0, 52, 0, 54, 0, 56, 0, 48, 0, 48, 0, 52, 0, 53, 0, 53, 0, 54, 0, 48, 0, 67, 0, 57, 0, 58, 0, 59, 0, 60, 0, 61, 0, 61, 0, 62, 0, 63, 0, 65, 0, 66, 0, 67, 0, 67, 0, 58, 0, 59, 0, 59, 0, 61, 0, 63, 0, 65, 0, 67, 0, 59, 0, 59, 0, 63, 0, 64, 0, 64, 0, 65, 0, 59, 0, 79, 0, 68, 0, 69, 0, 70, 0, 71, 0, 72, 0, 73, 0, 74, 0, 75, 0, 77, 0, 78, 0, 79, 0, 79, 0, 69, 0, 70, 0, 70, 0, 72, 0, 73, 0, 73, 0, 75, 0, 76, 0, 76, 0, 77, 0, 79, 0, 79, 0, 70, 0, 73, 0, 73, 0, 76, 0, 79, 0, 86, 0, 80, 0, 81, 0, 81, 0, 82, 0, 83, 0, 84, 0, 85, 0, 86, 0, 81, 0, 83, 0, 84, 0, 84, 0, 86, 0, 81, 0),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 87,
"vertex_data": PackedByteArray(0, 0, 250, 67, 0, 0, 143, 195, 204, 76, 249, 67, 0, 0, 143, 195, 204, 76, 246, 67, 0, 0, 141, 195, 0, 128, 239, 67, 0, 0, 141, 195, 0, 0, 165, 67, 0, 128, 142, 195, 0, 0, 165, 67, 154, 25, 142, 195, 0, 0, 144, 67, 154, 153, 139, 195, 0, 0, 144, 67, 205, 76, 139, 195, 52, 179, 129, 67, 0, 0, 134, 195, 152, 25, 122, 67, 0, 0, 134, 195, 152, 25, 116, 67, 0, 128, 137, 195, 52, 51, 94, 67, 0, 128, 135, 195, 152, 25, 73, 67, 0, 128, 135, 195, 0, 0, 14, 67, 51, 243, 133, 195, 0, 0, 14, 67, 102, 230, 134, 195, 152, 153, 2, 67, 0, 128, 137, 195, 0, 0, 8, 194, 0, 128, 137, 195, 0, 0, 8, 194, 102, 38, 137, 195, 152, 153, 179, 194, 0, 128, 132, 195, 52, 51, 10, 195, 0, 128, 132, 195, 0, 0, 21, 195, 205, 76, 133, 195, 0, 128, 151, 195, 205, 12, 129, 195, 0, 128, 151, 195, 154, 153, 128, 195, 0, 128, 157, 195, 154, 25, 128, 195, 102, 38, 161, 195, 0, 0, 122, 195, 102, 102, 164, 195, 0, 0, 122, 195, 102, 102, 166, 195, 0, 0, 126, 195, 154, 153, 173, 195, 0, 0, 126, 195, 102, 38, 192, 195, 0, 0, 130, 195, 0, 128, 205, 195, 0, 0, 130, 195, 0, 128, 225, 195, 0, 128, 129, 195, 0, 128, 225, 195, 0, 128, 130, 195, 0, 128, 230, 195, 0, 0, 134, 195, 0, 128, 230, 195, 0, 128, 137, 195, 0, 0, 230, 195, 0, 128, 149, 195, 51, 115, 229, 195, 0, 128, 149, 195, 51, 115, 228, 195, 0, 128, 172, 195, 51, 179, 227, 195, 0, 128, 172, 195, 0, 0, 224, 195, 102, 166, 183, 195, 0, 0, 224, 195, 154, 25, 191, 195, 0, 128, 222, 195, 0, 0, 197, 195, 0, 128, 222, 195, 0, 128, 204, 195, 0, 0, 221, 195, 0, 0, 248, 195, 205, 12, 220, 195, 0, 0, 248, 195, 0, 0, 219, 195, 0, 192, 249, 195, 0, 0, 250, 67, 0, 0, 250, 195, 208, 204, 236, 193, 0, 128, 84, 195, 160, 153, 245, 193, 0, 0, 82, 195, 48, 51, 255, 193, 0, 0, 82, 195, 152, 153, 7, 194, 0, 0, 79, 195, 104, 102, 20, 194, 0, 0, 79, 195, 48, 51, 33, 194, 102, 230, 83, 195, 208, 204, 28, 194, 0, 0, 86, 195, 48, 51, 23, 194, 0, 0, 86, 195, 0, 0, 20, 194, 204, 204, 86, 195, 0, 0, 20, 194, 204, 76, 88, 195, 0, 0, 10, 194, 102, 102, 89, 195, 104, 102, 22, 194, 0, 128, 73, 195, 208, 204, 26, 194, 0, 0, 71, 195, 152, 153, 31, 194, 0, 0, 71, 195, 152, 153, 39, 194, 0, 0, 68, 195, 104, 102, 52, 194, 0, 0, 68, 195, 48, 51, 65, 194, 102, 230, 72, 195, 208, 204, 60, 194, 0, 0, 75, 195, 48, 51, 55, 194, 0, 0, 75, 195, 0, 0, 52, 194, 204, 204, 75, 195, 0, 0, 52, 194, 204, 76, 77, 195, 0, 0, 42, 194, 102, 102, 78, 195, 192, 204, 52, 65, 0, 0, 71, 195, 64, 51, 35, 65, 0, 0, 69, 195, 160, 153, 9, 65, 0, 0, 69, 195, 64, 51, 163, 64, 52, 179, 66, 195, 0, 0, 64, 64, 204, 204, 67, 195, 0, 0, 64, 64, 52, 51, 69, 195, 0, 154, 25, 63, 0, 128, 71, 195, 0, 154, 217, 63, 0, 0, 74, 195, 128, 153, 57, 64, 0, 0, 74, 195, 0, 0, 128, 64, 154, 153, 75, 195, 0, 0, 128, 64, 0, 128, 77, 195, 192, 204, 220, 64, 204, 76, 78, 195, 160, 153, 105, 66, 0, 0, 229, 194, 48, 51, 101, 66, 0, 0, 224, 194, 0, 0, 68, 66, 0, 0, 224, 194, 0, 0, 68, 66, 104, 102, 232, 194, 0, 0, 76, 66, 104, 102, 234, 194, 0, 0, 76, 66, 152, 153, 236, 194, 0, 0, 86, 66, 204, 204, 238, 194)
}]

[sub_resource type="ArrayMesh" id="ArrayMesh_434mx"]
_surfaces = [{
"2d": true,
"aabb": AABB(-420, -500, 0, 735, 232, 0),
"attribute_data": PackedByteArray(68, 139, 76, 63, 166, 155, 196, 60, 201, 7, 77, 63, 76, 55, 137, 61, 54, 60, 77, 63, 76, 55, 137, 61, 78, 98, 80, 63, 226, 88, 23, 62, 78, 98, 80, 63, 125, 63, 53, 62, 215, 163, 80, 63, 248, 83, 99, 62, 169, 19, 80, 63, 248, 83, 99, 62, 232, 72, 78, 63, 250, 126, 106, 62, 176, 114, 72, 63, 250, 126, 106, 62, 102, 102, 38, 63, 104, 145, 109, 62, 20, 174, 71, 62, 104, 145, 109, 62, 20, 174, 71, 62, 12, 113, 108, 62, 150, 67, 11, 62, 195, 100, 106, 62, 150, 67, 11, 62, 103, 68, 105, 62, 53, 94, 186, 61, 175, 37, 100, 62, 53, 94, 186, 61, 101, 25, 98, 62, 231, 251, 169, 61, 62, 232, 89, 62, 231, 251, 169, 61, 19, 242, 1, 62, 197, 32, 176, 61, 133, 124, 208, 61, 197, 32, 176, 61, 57, 180, 72, 61, 123, 20, 174, 61, 57, 180, 72, 61, 123, 20, 174, 61, 244, 253, 212, 60, 10, 215, 163, 61, 7, 95, 152, 60, 10, 215, 163, 61, 163, 35, 57, 60, 88, 57, 180, 61, 82, 73, 157, 57, 68, 139, 76, 63, 0, 0, 0, 0),
"format": 34393296913,
"index_count": 72,
"index_data": PackedByteArray(1, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 6, 0, 7, 0, 8, 0, 8, 0, 9, 0, 10, 0, 11, 0, 12, 0, 13, 0, 13, 0, 14, 0, 15, 0, 15, 0, 16, 0, 17, 0, 19, 0, 20, 0, 21, 0, 21, 0, 22, 0, 23, 0, 23, 0, 24, 0, 25, 0, 1, 0, 3, 0, 4, 0, 4, 0, 6, 0, 8, 0, 8, 0, 10, 0, 11, 0, 11, 0, 13, 0, 15, 0, 15, 0, 17, 0, 18, 0, 21, 0, 23, 0, 25, 0, 1, 0, 4, 0, 8, 0, 8, 0, 11, 0, 15, 0, 15, 0, 18, 0, 19, 0, 19, 0, 21, 0, 25, 0, 0, 0, 1, 0, 8, 0, 8, 0, 15, 0, 19, 0, 19, 0, 25, 0, 0, 0, 0, 0, 8, 0, 19, 0),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 26,
"vertex_data": PackedByteArray(0, 128, 149, 67, 0, 0, 238, 195, 52, 115, 150, 67, 0, 128, 216, 195, 154, 217, 150, 67, 0, 128, 216, 195, 0, 0, 157, 67, 154, 25, 176, 195, 0, 0, 157, 67, 0, 128, 161, 195, 0, 128, 157, 67, 0, 0, 139, 195, 102, 102, 156, 67, 0, 0, 139, 195, 102, 230, 152, 67, 0, 128, 135, 195, 0, 128, 141, 67, 0, 128, 135, 195, 0, 0, 22, 67, 0, 0, 134, 195, 0, 128, 152, 195, 0, 0, 134, 195, 0, 128, 152, 195, 205, 140, 134, 195, 0, 0, 182, 195, 205, 140, 135, 195, 0, 0, 182, 195, 154, 25, 136, 195, 0, 128, 204, 195, 154, 153, 138, 195, 0, 128, 204, 195, 154, 153, 139, 195, 0, 128, 208, 195, 154, 153, 143, 195, 0, 128, 208, 195, 205, 140, 186, 195, 0, 0, 207, 195, 154, 25, 199, 195, 0, 0, 207, 195, 0, 128, 225, 195, 0, 128, 207, 195, 0, 128, 225, 195, 0, 128, 207, 195, 0, 0, 237, 195, 0, 0, 210, 195, 51, 179, 240, 195, 0, 0, 210, 195, 154, 89, 244, 195, 0, 0, 206, 195, 154, 217, 249, 195, 0, 128, 149, 67, 0, 0, 250, 195)
}]

[sub_resource type="ArrayMesh" id="ArrayMesh_bdiab"]
_surfaces = [{
"2d": true,
"aabb": AABB(-161, -185.1, 0, 67, 79.5, 0),
"attribute_data": PackedByteArray(203, 161, 197, 62, 220, 215, 161, 62, 203, 161, 197, 62, 229, 208, 162, 62, 113, 61, 202, 62, 102, 102, 166, 62, 113, 61, 202, 62, 195, 245, 168, 62, 49, 153, 202, 62, 12, 2, 171, 62, 104, 34, 204, 62, 12, 2, 171, 62, 41, 92, 207, 62, 104, 145, 173, 62, 41, 92, 207, 62, 13, 79, 175, 62, 77, 132, 205, 62, 141, 6, 176, 62, 4, 86, 206, 62, 187, 150, 176, 62, 4, 86, 206, 62, 180, 200, 182, 62, 168, 53, 205, 62, 180, 200, 182, 62, 150, 67, 203, 62, 199, 186, 184, 62, 150, 67, 203, 62, 82, 39, 192, 62, 59, 223, 207, 62, 83, 5, 195, 62, 59, 223, 207, 62, 240, 167, 198, 62, 23, 217, 206, 62, 240, 167, 198, 62, 223, 79, 205, 62, 57, 180, 200, 62, 166, 155, 196, 62, 57, 180, 200, 62, 166, 155, 196, 62, 221, 147, 199, 62, 166, 44, 195, 62, 221, 36, 198, 62, 201, 118, 190, 62, 221, 36, 198, 62, 217, 206, 183, 62, 204, 238, 201, 62, 217, 206, 183, 62, 57, 180, 200, 62, 233, 38, 177, 62, 57, 180, 200, 62, 233, 38, 177, 62, 20, 174, 199, 62, 160, 26, 175, 62, 221, 36, 198, 62, 160, 26, 175, 62, 65, 130, 194, 62, 252, 169, 177, 62, 9, 249, 192, 62, 252, 169, 177, 62, 228, 242, 191, 62, 243, 31, 178, 62, 217, 206, 183, 62, 59, 78, 177, 62, 217, 206, 183, 62, 104, 145, 173, 62, 79, 175, 180, 62, 104, 145, 173, 62, 215, 163, 176, 62, 169, 164, 174, 62, 215, 163, 176, 62, 24, 183, 177, 62, 86, 14, 173, 62, 106, 188, 180, 62, 86, 14, 173, 62, 108, 154, 183, 62, 66, 96, 165, 62, 61, 121, 184, 62, 66, 96, 165, 62, 109, 231, 187, 62, 239, 90, 162, 62, 109, 231, 187, 62, 146, 58, 161, 62),
"format": 34393296913,
"index_count": 117,
"index_data": PackedByteArray(40, 0, 0, 0, 1, 0, 1, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 6, 0, 7, 0, 8, 0, 8, 0, 9, 0, 10, 0, 13, 0, 14, 0, 15, 0, 16, 0, 17, 0, 18, 0, 21, 0, 22, 0, 23, 0, 23, 0, 24, 0, 25, 0, 25, 0, 26, 0, 27, 0, 28, 0, 29, 0, 30, 0, 30, 0, 31, 0, 32, 0, 32, 0, 33, 0, 34, 0, 34, 0, 35, 0, 36, 0, 36, 0, 37, 0, 38, 0, 39, 0, 40, 0, 1, 0, 1, 0, 3, 0, 4, 0, 4, 0, 6, 0, 8, 0, 8, 0, 10, 0, 11, 0, 13, 0, 15, 0, 16, 0, 16, 0, 18, 0, 19, 0, 21, 0, 23, 0, 25, 0, 25, 0, 27, 0, 28, 0, 30, 0, 32, 0, 34, 0, 36, 0, 38, 0, 39, 0, 39, 0, 1, 0, 4, 0, 4, 0, 8, 0, 11, 0, 13, 0, 16, 0, 19, 0, 21, 0, 25, 0, 28, 0, 30, 0, 34, 0, 36, 0, 36, 0, 39, 0, 4, 0, 4, 0, 11, 0, 12, 0, 12, 0, 13, 0, 19, 0, 20, 0, 21, 0, 28, 0, 28, 0, 30, 0, 36, 0, 36, 0, 4, 0, 12, 0, 12, 0, 19, 0, 20, 0, 20, 0, 28, 0, 36, 0, 36, 0, 12, 0, 20, 0),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 41,
"vertex_data": PackedByteArray(0, 0, 228, 194, 102, 230, 55, 195, 0, 0, 228, 194, 0, 0, 54, 195, 0, 0, 210, 194, 0, 0, 47, 195, 0, 0, 210, 194, 0, 0, 42, 195, 152, 153, 208, 194, 0, 0, 38, 195, 152, 153, 202, 194, 0, 0, 38, 195, 0, 0, 190, 194, 0, 0, 33, 195, 0, 0, 190, 194, 154, 153, 29, 195, 52, 51, 197, 194, 52, 51, 28, 195, 0, 0, 194, 194, 154, 25, 27, 195, 0, 0, 194, 194, 0, 0, 15, 195, 104, 102, 198, 194, 0, 0, 15, 195, 0, 0, 206, 194, 52, 51, 11, 195, 0, 0, 206, 194, 104, 102, 249, 194, 0, 0, 188, 194, 52, 51, 238, 194, 0, 0, 188, 194, 0, 0, 224, 194, 0, 0, 192, 194, 0, 0, 224, 194, 0, 0, 198, 194, 0, 0, 216, 194, 0, 0, 232, 194, 0, 0, 216, 194, 0, 0, 232, 194, 104, 102, 220, 194, 152, 153, 237, 194, 0, 0, 226, 194, 0, 0, 0, 195, 0, 0, 226, 194, 0, 0, 13, 195, 52, 51, 211, 194, 0, 0, 13, 195, 0, 0, 216, 194, 0, 0, 26, 195, 0, 0, 216, 194, 0, 0, 26, 195, 0, 0, 220, 194, 0, 0, 30, 195, 0, 0, 226, 194, 0, 0, 30, 195, 52, 51, 240, 194, 0, 0, 25, 195, 52, 51, 246, 194, 0, 0, 25, 195, 52, 51, 250, 194, 154, 25, 24, 195, 0, 0, 13, 195, 52, 179, 25, 195, 0, 0, 13, 195, 0, 0, 33, 195, 154, 25, 19, 195, 0, 0, 33, 195, 0, 0, 27, 195, 102, 230, 30, 195, 0, 0, 27, 195, 102, 230, 24, 195, 0, 0, 34, 195, 0, 0, 19, 195, 0, 0, 34, 195, 102, 102, 13, 195, 0, 0, 49, 195, 52, 179, 11, 195, 0, 0, 49, 195, 0, 0, 5, 195, 102, 230, 54, 195, 0, 0, 5, 195, 154, 25, 57, 195)
}]

[sub_resource type="BoxMesh" id="BoxMesh_8y1an"]

[sub_resource type="BoxMesh" id="BoxMesh_dm2al"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7moeq"]
radius = 86.0233

[sub_resource type="SphereMesh" id="SphereMesh_v2u24"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uvvks"]
size = Vector2(25, 30)

[sub_resource type="ArrayMesh" id="ArrayMesh_3g0lt"]
_surfaces = [{
"2d": true,
"aabb": AABB(-38.3, -275.2, 0, 17.3, 20.2, 0),
"attribute_data": PackedByteArray(125, 63, 245, 62, 140, 74, 106, 62, 125, 63, 245, 62, 180, 200, 118, 62, 88, 57, 244, 62, 180, 200, 118, 62, 33, 176, 242, 62, 72, 225, 122, 62, 123, 20, 238, 62, 72, 225, 122, 62, 123, 20, 238, 62, 89, 134, 120, 62, 242, 99, 236, 62, 179, 234, 115, 62, 31, 244, 236, 62, 252, 169, 113, 62, 197, 32, 240, 62, 252, 169, 113, 62, 197, 32, 240, 62, 140, 74, 106, 62, 233, 38, 241, 62, 103, 68, 105, 62, 233, 38, 241, 62, 249, 49, 102, 62),
"format": 34393296913,
"index_count": 30,
"index_data": PackedByteArray(11, 0, 0, 0, 1, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 10, 0, 11, 0, 1, 0, 2, 0, 4, 0, 5, 0, 5, 0, 7, 0, 8, 0, 8, 0, 10, 0, 1, 0, 2, 0, 5, 0, 8, 0, 8, 0, 1, 0, 2, 0),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 12,
"vertex_data": PackedByteArray(0, 0, 168, 193, 154, 153, 135, 195, 0, 0, 168, 193, 0, 128, 129, 195, 0, 0, 184, 193, 0, 128, 129, 195, 0, 0, 208, 193, 0, 0, 127, 195, 0, 0, 12, 194, 0, 0, 127, 195, 0, 0, 12, 194, 102, 166, 128, 195, 48, 51, 25, 194, 102, 230, 130, 195, 208, 204, 20, 194, 0, 0, 132, 195, 0, 0, 248, 193, 0, 0, 132, 195, 0, 0, 248, 193, 154, 153, 135, 195, 0, 0, 232, 193, 154, 25, 136, 195, 0, 0, 232, 193, 154, 153, 137, 195)
}]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_a1i31")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-3, 205)

[node name="backround" type="MeshInstance2D" parent="."]
position = Vector2(-42.6264, 429.701)
scale = Vector2(1.23725, 1.1134)
mesh = SubResource("ArrayMesh_342ws")
texture = ExtResource("2_ap666")
metadata/_edit_lock_ = true

[node name="Sprite2D2" type="MeshInstance2D" parent="."]
position = Vector2(90.2859, 1084.98)
scale = Vector2(1.68163, 1.94397)
mesh = SubResource("ArrayMesh_434mx")
texture = ExtResource("3_0p7wa")
metadata/_edit_lock_ = true

[node name="penguin" type="MeshInstance2D" parent="."]
texture_filter = 1
position = Vector2(23, 317)
scale = Vector2(1.92471, 1.92471)
mesh = SubResource("ArrayMesh_bdiab")
texture = ExtResource("4_aqm5v")

[node name="Node2D" type="Node2D" parent="penguin"]
position = Vector2(-129.89, -149.113)

[node name="MeshInstance2D3" type="MeshInstance2D" parent="."]
modulate = Color(0.896012, 0.95747, 0.96286, 1)
position = Vector2(153, 81)
scale = Vector2(107.75, 45.75)
mesh = SubResource("BoxMesh_8y1an")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
modulate = Color(0.855261, 0.860344, 0.874254, 1)
top_level = true
position = Vector2(1, 111.125)
scale = Vector2(1172.25, 17.75)
mesh = SubResource("BoxMesh_dm2al")

[node name="Area2D" type="Area2D" parent="." groups=["score"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-15, 61)
scale = Vector2(1.27022, 0.442277)
shape = SubResource("CircleShape2D_7moeq")

[node name="fish_hole" type="MeshInstance2D" parent="Area2D/CollisionShape2D"]
modulate = Color(0.0383972, 0.0383972, 0.0383972, 1)
position = Vector2(2.3618, 88.18)
scale = Vector2(172.911, 12.0375)
mesh = SubResource("SphereMesh_v2u24")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="spawner" type="Marker2D" parent="Sprite2D"]
position = Vector2(879, 173)
scale = Vector2(-0.412202, 0.0856527)
gizmo_extents = 27.5

[node name="Timer" type="Timer" parent="Sprite2D/spawner"]
wait_time = 1.196
autostart = true

[node name="main_character" parent="." instance=ExtResource("5_58xd7")]
position = Vector2(604, 602)

[node name="fishingLine" type="Line2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(-6, -13)
points = PackedVector2Array(22, 1, 22, 100)
width = 5.0

[node name="Hook" type="Area2D" parent="." groups=["hook"]]
position = Vector2(8, 92)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hook"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_uvvks")

[node name="Sprite2D2" type="MeshInstance2D" parent="Hook"]
texture_filter = 1
position = Vector2(78, 709)
scale = Vector2(2.67984, 2.67985)
mesh = SubResource("ArrayMesh_3g0lt")
texture = ExtResource("6_s7g7e")

[node name="score" type="Label" parent="."]
offset_left = 233.0
offset_top = -27.0
offset_right = 313.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 60

[node name="Popup" type="Popup" parent="."]
initial_position = 1

[node name="Button" type="Button" parent="Popup"]
offset_right = 8.0
offset_bottom = 8.0
size_flags_horizontal = 4
text = "retry"
script = ExtResource("7_o4m51")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_y1ia6")
autoplay = true

[connection signal="timeout" from="Sprite2D/spawner/Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Hook" to="." method="_on_area_2d_area_entered"]
[connection signal="button_down" from="Popup/Button" to="Popup/Button" method="_on_button_down"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
